--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,9 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile '~/.gitignore_global'
 
-# Ignore local .env
+# Ignore local env files
 /.env
+/.ruby-version
 
 # Ignore bundler config.
 /.bundle
