--- a/config/database.yml
+++ b/config/database.yml
@@ -25,6 +25,7 @@ default: &default
 development:
   <<: *default
   database: palyalumni_development
+  host: localhost
 
 production:
   <<: *default
