--- a/db/cms_fixtures/paly-alumni/pages/index/about-us/attributes.yml
+++ b/db/cms_fixtures/paly-alumni/pages/index/about-us/attributes.yml
@@ -1,8 +1,8 @@
 ---
-label: goteem
-layout: test
+label: About Us
+layout: about-us
 parent: index
-target_page: "/"
+target_page: 
 categories: []
 is_published: true
 position: 0
